--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <parent>
         <groupId>wsattacker.library</groupId>
         <artifactId>wsattacker-libraries</artifactId>
-        <version>1.8</version>
+        <version>1.9-SNAPSHOT</version>
     </parent>
 
     <!-- For WsuURIDereferencer: XMLSignatureInput, ApacheOctetStreamData, ApacheNodeSetData -->
@@ -46,19 +46,19 @@
         <dependency>
             <groupId>wsattacker.library</groupId>
             <artifactId>Schema_Analyzer_Library</artifactId>
-            <version>1.8</version>
+            <version>1.9-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>wsattacker.library</groupId>
             <artifactId>XML_Utilities_Library</artifactId>
-            <version>1.8</version>
+            <version>1.9-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>wsattacker.library</groupId>
             <artifactId>Signature_Wrapping_Library</artifactId>
-            <version>1.8</version>
+            <version>1.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>bouncycastle</groupId>
